Add shortcuts for moving the active tab right/left.

--- a/manifest.json
+++ b/manifest.json
@@ -15,6 +15,18 @@
                 "default": "Alt+T"
             },
             "description": "Opens a new tab to the right"
+        },
+        "move-tab-right": {
+            "suggested_key": {
+                "default": "Alt+Shift+Right"
+            },
+            "description": "Moves the current tab to the right"
+        },
+        "move-tab-left": {
+            "suggested_key": {
+                "default": "Alt+Shift+Left"
+            },
+            "description": "Moves the current tab to the left"
         }
     },
     "permissions": [
